--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   http: ^1.2.2
   flutter_native_splash: ^2.4.3
   cached_network_image: ^3.4.1
+  intl: ^0.20.1
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
