--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   # intl: ^0.20.1
   shared_preferences: ^2.3.4
   url_launcher: ^6.3.1
+  flutter_secure_storage: ^9.2.3
 
 dev_dependencies:
   flutter_test:
