--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   http: ^1.2.2
   flutter_native_splash: ^2.4.3
   cached_network_image: ^3.4.1
-  # intl: ^0.20.1
+  intl: ^0.20.1
   shared_preferences: ^2.3.4
   url_launcher: ^6.3.1
   flutter_secure_storage: ^9.2.3
